--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write   # 必須開啟，才能請求 OIDC Token
+  contents: read
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -31,3 +35,13 @@ jobs:
 
       - name: CDK Synth
         run: cdk synth
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::752953536465:role/GithubActionsRole
+          aws-region: ap-northeast-1
+
+      - name: CDK Deploy
+        run: cdk deploy --require-approval never
+        
