Add pip-audit for dependency auditing
Added pip-audit installation and execution steps for dependency auditing.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,12 @@ jobs:
         run: pip install -r requirements.txt
         working-directory: ./  # 確保 requirements.txt 在正確路徑
 
+      - name: Install pip-audit
+        run: pip install pip-audit
+
+      - name: Run Dependency Audit
+        run: pip-audit
+        
       - name: CDK Synth
         run: cdk synth
 
